Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.046     2013-06-30 21:14:06 America/New_York

    - Add PluginRemover for easy disabling of plugins

0.045     2013-06-06 15:41:29 America/New_York

    - Add 'no_minimum_perl' parameter

0.044     2013-03-26 15:47:58 America/New_York

    - Add Encoding plugin to Pod::Weaver

0.043     2013-03-02 23:08:40 America/New_York

    - Add Test::MinimumVersion with default perl of 5.010

0.042     2013-02-27 10:19:05 America/New_York

    - Add ContributorsFromGit plugin and Contributors Pod Weaver section

0.041     2013-02-21 16:14:21 America/New_York

    - Make 'no_critic' work as advertised

0.040     2013-02-13 09:32:02 America/New_York

    - Add 'no_git' option to bypass git-related plugins

0.039     2013-02-11 13:17:21 America/New_York

    - Replace buggy ReadmeFromPod with another invocation of
      ReadmeAnyFromPod

0.038     2013-02-11 12:16:15 America/New_York

    - Add [Test::ReportPrereqs]

0.037     2013-01-30 14:51:07 America/New_York

    - tweaked Pod::Weaver settings.  Reordered "=func" sections.
      Added "=usage" and "=construct" as new collectors

0.036     2013-01-22 06:20:57 America/New_York

    - add no_coverage option

0.035     2013-01-16 15:20:10 America/New_York

    - don't check files for multiple dots

0.034     2012-12-26 11:49:57 America/New_York

    - fixed typo [BOOK]

0.033     2012-09-28 13:01:07 America/New_York

    - document how to use AutoMetaResources for github to remind myself

0.032     2012-08-08 20:26:15 America/New_York

    - bumped Pod::Wordlist::hanekomu prereq version

    - deprecated 'bugtracker' option

    - replaced GithubMeta and Bugtracker with less dynamic
      AutoMetaResources plugin

    - added Config::Slicer support

0.031     2012-08-06 21:15:39 America/New_York

    - bumped OurPkgVersion prereq to 0.004 for "# TRIAL VERSION" comment
      support for use with --trial packages

0.030     2012-05-14 19:59:48 America/New_York
